--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,7 @@ monitor_speed = 115200
 board = esp32dev
 framework = arduino
 lib_deps = 
-    SPI
-    Wire
-    sparkfun/SparkFun u-blox GNSS Arduino Library@^2.2.21
+	SPI
+	Wire
+	sparkfun/SparkFun u-blox GNSS Arduino Library@^2.2.21
+	knolleary/PubSubClient@^2.8
