--- a/platformio.ini
+++ b/platformio.ini
@@ -18,3 +18,5 @@ lib_deps =
 	Wire
 	sparkfun/SparkFun u-blox GNSS Arduino Library@^2.2.21
 	knolleary/PubSubClient@^2.8
+	bblanchon/ArduinoJson@^6.20.1
+	andrealombardo/L298N@^2.0.3
